// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> only renders trigger on mount 1`] = `
<DocumentFragment>
  .c0 {
  font-family: inherit;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  text-transform: capitalize;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  pointer-events: auto;
  opacity: 1;
  color: white;
  height: 36px;
  padding: 0 18px;
  font-size: 12px;
  width: auto;
  background: #2DAAF2;
  border: 1px solid #2DAAF2;
  -webkit-transition: 175ms;
  transition: 175ms;
}

.c0:hover {
  background: #45b4f3;
  border-color: #45b4f3;
}

.c0:active {
  background: #51b9f4;
  border-color: #51b9f4;
}

<button
    aria-expanded="false"
    aria-haspopup="true"
    class="re-button re-button-primary c0"
  >
    Trigger
  </button>
</DocumentFragment>
`;

exports[`<Dropdown /> opens menu with focus when trigger is clicked 1`] = `
<DocumentFragment>
  .c0 {
  font-family: inherit;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  text-transform: capitalize;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  pointer-events: auto;
  opacity: 1;
  color: white;
  height: 36px;
  padding: 0 18px;
  font-size: 12px;
  width: auto;
  background: #2DAAF2;
  border: 1px solid #2DAAF2;
  -webkit-transition: 175ms;
  transition: 175ms;
}

.c0:hover {
  background: #45b4f3;
  border-color: #45b4f3;
}

.c0:active {
  background: #51b9f4;
  border-color: #51b9f4;
}

<button
    aria-expanded="true"
    aria-haspopup="true"
    class="re-button re-button-primary c0"
  >
    Trigger
  </button>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .c0 {
  z-index: 10;
  background: white;
  border-radius: 4px;
  border: 1px solid #e4edf5;
  outline: none;
  box-shadow: 0 0 3px 0 rgba(178,194,212,0.3);
  width: 150px;
  opacity: 0.75;
  -webkit-transform: scale(0.75);
  -ms-transform: scale(0.75);
  transform: scale(0.75);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-animation: gPsOjp 225ms cubic-bezier(0.25,0.1,0.17,1.2) forwards;
  animation: gPsOjp 225ms cubic-bezier(0.25,0.1,0.17,1.2) forwards;
}

.c1 {
  padding: 0.75rem 1rem 0;
}

.c2 {
  padding: 0 0 0.25rem;
  border-bottom: 2px solid #DEE0E4;
}

.c3 {
  padding: 1rem;
}

.c4 {
  display: block;
  width: calc(100% + 2rem);
  opacity: 1;
  pointer-events: initial;
  -webkit-user-select: initial;
  -moz-user-select: initial;
  -ms-user-select: initial;
  user-select: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  cursor: pointer;
  margin: 0 calc(-1rem);
  padding: 0.25rem 1rem;
  -webkit-transition: 125ms background;
  transition: 125ms background;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  font: inherit;
  text-align: left;
}

.c4 + .c6 {
  margin-top: 1rem;
}

.c4:hover,
.c4:focus {
  color: inherit;
  background: #F1F4F6;
}

.c5 {
  background: #F1F4F6;
  padding: 0.75rem 1rem;
  border-radius: 0 0 4px 4px;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      class="re-dropdown-menu c0"
      data-testid="dropdown-menu"
      style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      tabindex="0"
      width="150"
    >
      <header
        class="re-dropdown-header c1"
      >
        <div
          class="re-dropdown-header-inner c2"
        >
          Header
        </div>
      </header>
      <div
        class="re-box re-dropdown-body c3"
      >
        <div
          class="re-box re-dropdown-item c4"
          data-testid="item-one"
          role="button"
          tabindex="0"
        >
          One
        </div>
        <div
          class="re-box re-dropdown-item c4"
          data-testid="item-two"
          role="button"
          tabindex="0"
        >
          Two
        </div>
      </div>
      <footer
        class="re-box re-dropdown-footer c5"
      >
        Footer
      </footer>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
